# GEOS_Util

./: CHANGELOG.md  CMakeLists.txt  README.md
.circleci/: config.yml
.github/: CODEOWNERS
plots/: chckhist.new  configure  get_exports  landscape.script  moveplot  movestat  portrait.script  quickplot  quickstat  zonal.f
post/: 3CH.F90  3CH.j  AI_prs2eta.F  CMakeLists.txt  Create_TEM_Diag  Create_TEM_Diag.F  TEM.F90  binarytile.F90  convert_eta.F  ec_eta2fv.F  ec_prs2eta.F  ec_prs2fv  ec_prs2fv.F  era5_eta2eta.F  era5_prs2eta.F  eta2prs.F  flat2hdf.F  g5fcst_stats.pl  gcmclim.script  gcmpost.script  gcmpost_CPLFCSTfull.script  gcmpost_CPLFCSTpart.script  gg2eta.F  gg2fv.F  mpi_util.F  ncep_prs2fv.F  plot.rc  rs_hinterp.F  rs_numtiles.F90  rs_vinterp.F90  rs_vinterp_scm.F90  rsg3_vinterp.F  stats.F90  time_ave.F  time_ave.rc  (+1 more)
pre/: CMakeLists.txt  regrid.pl
pre/NSIDC-OSTIA_SST-ICE_blend/: BLEND-OSTIA-REYNOLDS.pl  CMakeLists.txt  cube_BCs.pl  read_Reynolds.F90  regrid_forcing.F90  regrid_forcing_esmf.F90
pre/prepare_ocnExtData/: CMakeLists.txt  daily_clim_SST_FRACI_eight.F90  extract_day_SST_FRACI_eight.F90  forecast_SST_FRACI_eight.F90  gen_wts_regrid_ostia_geos.py  hermes_m_tick.f90  plot_diff_ostia_native_regridded_binned.py  proc_SST_FRACI_eight.F90  sst_ice_helpers.F90
pre/remap_restart/: CMakeLists.txt  README_regrid_fp_restart_deterministic_and_ens  bin2nc_fv.yaml  bin2nc_merra2_agcm.yaml  bin2nc_merra2_catch.yaml  bin2nc_merra2_fv.yaml  bin2nc_merra2_gocart.yaml  bin2nc_merra2_lake.yaml  bin2nc_merra2_landice.yaml  bin2nc_merra2_moist.yaml  bin2nc_merra2_pchem.yaml  bin2nc_merra2_salt.yaml  bin2nc_salt.yaml  f5295_fp_rs_path  remap_analysis.py  remap_analysis_ens.py  remap_base.py  remap_bin2nc.py  remap_catchANDcn.py  remap_command.py  remap_command_line.py  remap_lake.yaml  remap_lake_landice_saltwater.py  remap_landice.yaml  remap_other_restarts.py  remap_params.py  remap_params.tpl  remap_questions.py  remap_restarts.py  remap_restarts_ens.py  remap_upper.py  remap_upper_ens.py  remap_utils.py
pre/remap_restart/ens_scripts/: cp_mem_files.atmens.sh  move_mem_files.sh  move_orig_resol.sh  regrid_ens.j  regrid_ens.sh  rename.sh
pre/remap_restart/tests/: amip_c180Toc90.yaml  c180Toc360.yaml  c24Toc12.yaml  c360Toc24.yaml  f522Toc360.yaml  test_remap_cases.yaml  test_remap_restarts.py
(+117 files in other folders)
